@@ -1,7 +1,7 @@
 Package: FDboost
 Type: Package
 Title: Boosting Functional Regression Models
-Version: 0.2-1
+Version: 0.3-0
 Date: 2017-05-05
 Authors@R: c(person("Sarah", "Brockhaus", role = c("aut", "cre"),
 		            email = "Sarah.Brockhaus@stat.uni-muenchen.de"), 
@@ -38,6 +38,7 @@ Suggests:
 License: GPL-2
 Packaged: 2017-05-05 13:44:03 UTC; brockhaus
 Collate:
+    'aaa.R'
     'FDboost.R'
     'baselearners.R'
     'baselearnersX.R'
