@@ -115,4 +115,5 @@ importFrom(stats,sd)
 importFrom(stats,terms.formula)
 importFrom(stats,variable.names)
 importFrom(utils,getS3method)
+importFrom(utils,packageDescription)
 importFrom(zoo,na.locf)
